Prevent that the focus outline overflows the table cell (#31214)

--- a/app/assets/stylesheets/content/work_packages/_table_content.sass
+++ b/app/assets/stylesheets/content/work_packages/_table_content.sass
@@ -122,8 +122,7 @@ html:not(.-browser-mobile)
 
 .wp-table--cell-container
   @extend .ellipsis
-  .wp-table--cell-td.-editing &
-    display: block
+  display: block
 
   .inline-edit--display-field
     display: initial
